Attempt 4 - production bug on iphones whereby media-scroller not scrolling. Added -webkit-overflow-scrolling: touch; to body

--- a/c2_main_app/static/c2_main_app/styles/_home-products.scss
+++ b/c2_main_app/static/c2_main_app/styles/_home-products.scss
@@ -7,7 +7,6 @@
     grid-auto-columns: var(--product-cols--);
     padding: 0 0 5rem 0;
     overflow-x: scroll;
-    -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth;
     overscroll-behavior-inline: contain;
     margin-left: var(--edge-margin--);
