--- a/c2_main_app/static/c2_main_app/styles/_setup.scss
+++ b/c2_main_app/static/c2_main_app/styles/_setup.scss
@@ -69,6 +69,7 @@ body {
     margin: 0 auto;
     background-color: $offWhite;
     overscroll-behavior: none;
+    -webkit-overflow-scrolling: touch;
 
     main {
         background-color: $offWhite;
